--- a/todo/main/templates/index.html
+++ b/todo/main/templates/index.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toDO</title>
-    <link rel="stylesheet" href="./styles/chack-box.css">
-    <link rel="stylesheet" href="./styles/index.css">
+    <!-- <link rel="stylesheet" href="./styles/chack-box.css"> -->
+    <link rel="stylesheet" href="{%static 'styles/chack-box.css'%}">
+    <!-- <link rel="stylesheet" href="./styles/index.css"> -->
+    <link rel="stylesheet" href="{%static 'styles/index.css'%}">
 </head>
 <body>
     <section class="wrapper">
