--- a/todo/main/templates/test.html
+++ b/todo/main/templates/test.html
@@ -1,16 +1,55 @@
-
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo</title>
+    <!-- <link rel="stylesheet" href="./styles/chack-box.css"> -->
+    <link rel="stylesheet" href="{% static 'styles/chack-box.css' %}">
+    <!-- <link rel="stylesheet" href="./styles/index.css"> -->
+    <link rel="stylesheet" href="{% static 'styles/index.css' %}">
 </head>
+
 <body>
     <h5>my test site</h5>
-    <h3> {% for todo in todo_list %} - {todo.created_at} </h3>
-    <h3> {{todo.text}} </h3>
-    {% endfor %}
+    <section class="wrapper">
+        <div class = "create_container">
+            <form action = "{% url 'add-todo' %}" method = "POST">
+                {% csrf_token %}
+                <input 
+                    id = "create_input" 
+                    type = "text" 
+                    placeholder = "напиши сюда новую задачу"
+                    name="todo_text"
+            />
+            <button class = "create_button">Добавить</button>
+        </form>
+        </div>
+        <div class = "todo_container">
+            {% for todo in todo_list %}
+            <div class = "todo_item">
+                <div class = "todo_item_header">
+                    <label class = "checkbox_container">
+                        <input type = "checkbox"/>
+                        <span class = "checkmark"></span>
+                    </label>
+                    <h3>{{ todo.text }}</h3>
+                </div>
+                <div class ="todo_item_footer">
+                    
+                    <p>{{ todo.created_at }}</p>
+                    <div class ="action_buttons">
+                        <img src = "{% static 'icon/delete-sign.png'%}" />
+                        <img src = "{% static 'icon/a9d17867cb60ec9bf6aa046f59ab08d3.jpeg'%}" />
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+        </div>
+    </section>
 </body>
+
 </html>
