--- a/todo/main/templates/index.html
+++ b/todo/main/templates/index.html
@@ -1,4 +1,4 @@
-{%load static%}
+{% load static %} 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
     <!-- <link rel="stylesheet" href="./styles/chack-box.css"> -->
-    <link rel="stylesheet" href="{%static 'styles/chack-box.css'%}">
+    <link rel="stylesheet" href="{% static 'styles/chack-box.css' %}">
     <!-- <link rel="stylesheet" href="./styles/index.css"> -->
-    <link rel="stylesheet" href="{%static 'styles/index.css'%}">
+    <link rel="stylesheet" href="{% static 'styles/index.css' %}">
 </head>
 <body>
     <section class="wrapper">
@@ -29,8 +29,8 @@
                 <div class ="todo_item_footer">
                     <p>17.11.2020 <span>17:30</span></p>
                     <div class ="action_buttons">
-                        <img src = "./icon/delete-sign.png" />
-                        <img src = "./icon/a9d17867cb60ec9bf6aa046f59ab08d3.jpeg" />
+                        <img src = "{% static 'icon/delete-sign.png'%}" />
+                        <img src = "{% static 'icon/a9d17867cb60ec9bf6aa046f59ab08d3.jpeg'%}" />
                     </div>
                 </div>
             </div>
@@ -45,8 +45,8 @@
                 <div class = "todo_item_footer">
                     <p>17.11.2020 <span>17:30</span></p>
                     <div class ="action_buttons">
-                        <img src = "./icon/checkmark--v1 — копия.png" />
-                        <img src = "./icon/a9d17867cb60ec9bf6aa046f59ab08d3.jpeg" />
+                        <img src = "{% static 'icon/checkmark--v1 — копия.png'%}" />
+                        <img src = "{% static 'icon/a9d17867cb60ec9bf6aa046f59ab08d3.jpeg'%}" />
                     </div>
                 </div>
             </div>
@@ -61,8 +61,8 @@
                 <div class ="todo_item_footer">
                     <p>17.11.2020 <span>17:30</span></p>
                     <div class ="action_buttons">
-                        <img src = "./icon/delete-sign.png" />
-                        <img src = "./icon/a9d17867cb60ec9bf6aa046f59ab08d3.jpeg" />
+                        <img src = "{% static 'icon/delete-sign.png'%}" />
+                        <img src = "{% static 'icon/a9d17867cb60ec9bf6aa046f59ab08d3.jpeg'%}" />
                     </div>
                 </div>
             </div>
